# grow-a-garden

./: .gitattributes  .gitignore  1-click.bat  AGENTS.md  CLAUDE.md  CMakeLists.txt  LICENSE  ONE_CLICK_INSTRUCTIONS.md  README.md  launch.bat  save.example.json  save.json
.claude/: settings.json
.github/workflows/: ci.yml
assets/audio/bgm/: 06_Main_Music_00.flac  07_main_music_01.flac  08_main_music_02.flac  09. Main Music 03.flac  09_main_music_03.flac  10_main_music_04.flac  11. Main Music 05.flac  11_main_music_05.flac  12_main_music_06.flac  13_main_music_07.flac  14_main_music_08.flac  15_main_music_09.flac  16_main_music_10.flac  17_main_music_11.flac  18_main_music_12.flac  19. Main Music 13.flac  19_main_music_13.flac
assets/fonts/: LICENSE.txt
docs/: TITLE_SCREEN.md  class_diagram.puml
src/: main.cpp
src/core/: Game.cpp  Game.h  Player.cpp  Player.h  TickSystem.cpp  TickSystem.h
src/entities/: Carrot.cpp  Carrot.h  HarvestedItem.cpp  HarvestedItem.h  Mutation.cpp  Mutation.h  Plant.cpp  Plant.h
src/game/: CropRenderer.cpp  CropRenderer.h  GameScreen.cpp  GameScreen.h  HarvestBasket.h  InventoryOverlay.cpp  InventoryOverlay.h  PlantFactory.cpp  PlantFactory.h  SessionManager.cpp  SessionManager.h  ShopData.h  ShopOverlay.cpp  ShopOverlay.h
src/items/: FertilizerTool.cpp  FertilizerTool.h  Item.cpp  Item.h  Seed.cpp  Seed.h  Tool.cpp  Tool.h  WateringCan.cpp  WateringCan.h
src/systems/: Inventory.cpp  Inventory.h  RaccoonEvent.cpp  RaccoonEvent.h  RandomEvent.h  RandomEventManager.cpp  RandomEventManager.h  Shop.cpp  Shop.h
src/title/: Button.cpp  Button.h  CreditsScreen.cpp  CreditsScreen.h  TitleScreen.cpp  TitleScreen.h  TitleScreenApp.cpp  TitleScreenApp.h
src/ui/: AudioManager.cpp  AudioManager.h  DrawUtils.cpp  DrawUtils.h  UIManager.cpp  UIManager.h
src/world/: Cell.cpp  Cell.h  Garden.cpp  Garden.h  WeatherSystem.cpp  WeatherSystem.h
tests/: CMakeLists.txt  test_cell_garden.cpp  test_events.cpp  test_integration.cpp  test_inventory_shop.cpp  test_items.cpp  test_mutation.cpp  test_plant.cpp  test_tools_factory.cpp  test_ui_audio.cpp  test_weather.cpp
tests/helpers/: ConcreteClasses.h
visual-qa-shots/: save-before-controlled-sell-qa.json
